--- a/Cliant/Web/style.css
+++ b/Cliant/Web/style.css
@@ -2,8 +2,8 @@ body {
     display: grid;
     margin: 0;
     height: 100vh;
-    grid-template-rows: 35px 1fr 35px;
-    grid-template-columns: 55px 200px 75px  1fr;
+    grid-template-rows: 1fr 35px 1fr 35px;
+    grid-template-columns: 55px 200px 300px 1fr;
     column-gap: 5px;
     row-gap: 5px;
 }
@@ -12,18 +12,76 @@ body > * {
 	margin: 5px;
 }
 
-#connect_btn {
+#status_monitor {
+    grid-row: 1;
+    grid-column: 1/3;
+    background-color:lightgray;
+    padding: 5px;
+}
+
+#control_panel {
+    grid-row: 1;
+    grid-column: 3;
+    background-color: whitesmoke;
+    padding: 5px;
+    display: grid;
+    grid-template-rows: 25px 25px 10px 25px 25px 10px 25px 25px 25px 25px 1fr;
+    grid-template-columns: 1fr;
+    column-gap: 5px;
+    row-gap: 5px;
+}
+#setVolA_btn {
     grid-row: 1;
     grid-column: 1;
 }
+#A_vol_label {
+    grid-row: 2;
+    grid-column: 1;
+}
+#setVolB_btn {
+    grid-row: 4;
+    grid-column: 1/3;
+}
+#B_vol_label {
+    grid-row: 5;
+    grid-column: 1; 
+}
+#IV_btn {
+    grid-row: 7;
+    grid-column: 1; 
+}
+#IV_vol_label {
+    grid-row: 8;
+    grid-column: 1; 
+}
+#csv_btn {
+    grid-row: 9;
+    grid-column: 1; 
+}
+#csv_name_label {
+    grid-row: 10;
+    grid-column: 1; 
+}
 
-#baudrate {
+#connect_btn {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+#graph_container {
     grid-row: 1;
+    grid-column: 4;
+    width: 100%;
+    height: 100%;
+}
+
+#baudrate, #baudrate_label {
+    grid-row: 2;
     grid-column: 2;
 }
 
 #serial_console {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1/5;
     border: 1px solid #000;
     overflow-y: auto;
@@ -46,11 +104,11 @@ body > * {
 }
 
 #send_btn {
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 1;
 }
 
 #send_text {
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 2/5;
 }
