--- a/Cliant/Web/style.css
+++ b/Cliant/Web/style.css
@@ -20,47 +20,13 @@ body > * {
 }
 
 #control_panel {
-    grid-row: 1;
-    grid-column: 3;
     background-color: whitesmoke;
-    padding: 5px;
-    display: grid;
-    grid-template-rows: 25px 25px 10px 25px 25px 10px 25px 25px 25px 25px 1fr;
-    grid-template-columns: 1fr;
-    column-gap: 5px;
-    row-gap: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
 }
-#setVolA_btn {
-    grid-row: 1;
-    grid-column: 1;
-}
-#A_vol_label {
-    grid-row: 2;
-    grid-column: 1;
-}
-#setVolB_btn {
-    grid-row: 4;
-    grid-column: 1/3;
-}
-#B_vol_label {
-    grid-row: 5;
-    grid-column: 1; 
-}
-#IV_btn {
-    grid-row: 7;
-    grid-column: 1; 
-}
-#IV_vol_label {
-    grid-row: 8;
-    grid-column: 1; 
-}
-#csv_btn {
-    grid-row: 9;
-    grid-column: 1; 
-}
-#csv_name_label {
-    grid-row: 10;
-    grid-column: 1; 
+#control_panel label{
+    margin: 0 0 10px 0;
 }
 
 #connect_btn {
