シリアルコンソールの色変更機能追加 記録中のコンソール出力を無効にし、軽量化

--- a/Cliant/Web/style.css
+++ b/Cliant/Web/style.css
@@ -64,9 +64,17 @@ body > * {
 .red {
     color: red;
 }
+.red_bold {
+    color: red;
+    font-weight: bold;
+}
 
 .green {
     color: green;
+}
+
+.gray {
+    color: gray;
 }
 
 #send_btn {
